Sorted out alignment issue when sat in a ion-col. Removed GDS font for now

--- a/src/theme/sass-partials/_forms.scss
+++ b/src/theme/sass-partials/_forms.scss
@@ -50,7 +50,8 @@ input[type='checkbox'] {
 }
 
 .checkbox-label-typography {
-  font-family: 'GDSTransportWebsite';
+  // todo - add font back later
+  //font-family: 'GDSTransportWebsite';
   font-size: 19px;
   letter-spacing: 0.36px;
 }
@@ -61,8 +62,10 @@ input[type='checkbox'] {
 
 .gds-radio-button {
   @extend .checkbox-label-typography;
-  display: inline;
-  margin: 0.5rem;
+  > label {
+    display: flex;
+    align-items: center;
+  }
   input[type='radio'] {
     position: absolute;
     opacity: 0;
@@ -73,11 +76,10 @@ input[type='checkbox'] {
         border: 2px solid map-get($colors, dark);
         border-radius: 100%;
         display: inline-block;
-        width: 40px;
-        height: 40px;
+        width: 44px;
+        height: 44px;
         position: relative;
         vertical-align: top;
-        top: -5px;
         margin-right: 0.6em;
         cursor: pointer;
         text-align: center;
